--- a/first-service/pom.xml
+++ b/first-service/pom.xml
@@ -56,6 +56,10 @@
             <groupId>kafka.micro</groupId>
             <artifactId>common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 
