--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>api-gateway</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
