--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
         <module>first-service</module>
         <module>second-service</module>
         <module>common-service</module>
+        <module>naming-service</module>
+        <module>api-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -20,7 +22,8 @@
     <name>services</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-
+        <java.version>17</java.version>
+        <spring-cloud.version>2022.0.3</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -37,6 +40,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>kafka.micro</groupId>
                 <artifactId>
@@ -64,9 +74,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-archetype-plugin</artifactId>
                 <version>3.2.1</version>
-                <configuration>
-                    <release>17</release>
-                </configuration>
             </plugin>
         </plugins>
     </build>
